syntax = "proto3";
package article;

option go_package = "article-service/pb/article;article";
//import "google/protobuf/timestamp.proto";

message EmptyRequest {
    
}

message Sort {
    string field = 1;
    string sort_by = 2;
}

message GetArticleRequest {
    string id = 1;
}

message GetListArticleRequest {
    repeated Sort sort = 1;
    int32 offset = 2;
    int32 limit = 3;
    string search = 4;
    string created_at = 5;
    string author = 6;
}

message InsertArticleRequest {
    string id = 1;
    string author = 2;
    string title = 3;
    string body = 4;
    string created_at = 5;
}